# fmt_adapter

./: .gitignore  Cargo.toml  README.md  README.tpl  build.rs  gen_readme.cmd  gen_readme.sh
src/: import_generated.rs  lib.rs
