[package]
name = "fmt_adapter"
version = "0.2.0"
authors = ["Kotauskas <v.toncharov@gmail.com>"]
edition = "2018"
description = "Provides newtype adaptors to and from any formatting trait"
readme = "README.md"
license = "CC0-1.0"
repository = "https://github.com/kotauskas/fmt_adapter"
documentation = "https://docs.rs/fmt_adapter"
categories = ["no-std", "rust-patterns"]
keywords = ["fmt", "format", "newtype", "adapter", "displayfromdebug"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html